
Release 5.0.4 (unreleased)
==========================

Bug fixes
---------

- Fixes for handling of coupled RSM (irijco=1) with GUI settings

- Fix some spurious warning messages relative to number of sweeps
  and extended neighborhood reduction when using LES.

- Lagrangian module: fix characteristic time using temperature.

- Fix for issue #236 (crash on restart using periodicity).

- Major fix for coupled Rij solver (irijico = 1).

- Ensure field domain is filled in with cases basename
  in coupling parameters script when creating a coupled study.

- Fix turbophoresis drift flux computation for coupled RSM models (irijco=1).

- Fix bounds for dynamic profiles in imbrication module for atmo. flow.

- Compatibility fixes for coupled RSM components (irijco=1) with
  some models (such as turbulent diffusion).

- Lagrangian module: fixes for return coupling with coupled RSM model.

- GUI: fix for mesh name filter with Qt5.

- Fix bug in double backward Euler for scalars.

- Fix matrix coefficient assignment issue for MSR matrices in cases
  where multiple faces separate two given cells (such as when faces are
  subdivided). This could lead to incorrect linear solver convergence
  in those cases, affecting mostly multigrid as a preconditioner cases,
  which uses MSR-type matrices.

- Fix issue in some matrix structure selection forced cases.

- Several fixes in CFD_STUDY's interactive behavior.

- Fix missing file in theory graphics Makefile.

Architectural changes
---------------------

- Improve Catalyst environment handling for better automation with SALOME.

Release 5.0.3 (June 29 2017)
============================

Bug fixes
---------

- Fix call to eigen values computation in coupled Rij-SSG solver.

- Fix for triangulation of warped faces issue (preceding version 4.0).

Release 5.0.2 (June 23 2017)
============================

Bug fixes
---------

- Complete reinit_turb for Bl-v2-k model.
